--- a/liuyan.html
+++ b/liuyan.html
@@ -23,7 +23,7 @@
 	border-radius: 20px;
 }
 </style>
-<link href="file:///E|/大三上学期/网页设计/caowenyangdeyinyangshi_web/liuyancss.css" rel="stylesheet" type="text/css">
+<link href="https://raw.githubusercontent.com/cwyms/css/main/css/liuyancss.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 body {
 	margin-right: auto;
